--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <br />
       <div class="portfolio-container">
         <div class="portfolio-box">
-          <img src="Clipping/1 before.png" alt="" />
+          <img src="clipping/1 before.png" alt="" />
           <div class="portfolio-layer">
             <img src="Clipping/1 after.png" alt="" />
           </div>
@@ -282,7 +282,7 @@
     </section>
 
     <section class="portfolio" id="portfolio">
-      <h2 class="heading">Latest <span>Hhost mannequin and Jewelry</span></h2>
+      <h2 class="heading">Latest <span>Ghost mannequin and Jewelry</span></h2>
 
       <br />
       <div class="portfolio-container">
@@ -380,6 +380,6 @@
       });
     </script>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
